# UD_complexity

./: .gitattributes  .gitignore  README.md  notes 20240301.txt  pyproject.toml  requirements.tsv  reviews.txt
code/: 00_run_all.R  01_check_used_functions.R  01_requirements.R  01_requirements_dirs.R  01_requirements_install.R  01_requirements_load.R  02_basemap.R  02_checking_packages.R  02_collapse_UD_dirs.R  02_get_UD.R  02_get_glottolog_language_table.R  02_get_grambank_data.R  02_google_pop.R  02_make_metadf.R  02_maps.R  02_process_data.R  02_process_data_per_UD_proj.R  02_process_data_per_conllu.R  02_requirements_dirs.R  03_compare_UD_gb.R  03_google_pop.R  03_poking.R  03_process_data_per_UD_proj.R  03_run_python.R  03_stack_summaries.R  03_summarise.R  03_summarise_data.R  03_summarise_for_plots.R  04_TTR.R  04_UD_Genre_plot.R  04_UPOS_feat_usefulness.R  04_combine_all_data.R  04_compare_token_counts.R  04_make_metadf.R  04_map_TTR.R  04_map_surprisal.R  04_maps.R  04_maps_counts.R  04_plot_SPLOM.R  04_stack_summaries.R  (+14 more)
data/: UD_languages.tsv  google_pop.tsv
latex/: appendices.tex  bib.bib  citation_keys.txt  dgruyter.sty  latexmkrc  main.tex  main_diff.tex  main_new.tex  main_old.tex  pkgs_versions_table.tsv  used_packages_table.tex  used_pkgs.bib
pycode_ud/: conllu.py  create_boxplots.py  holm_bonferroni.py  mlc_morph.py  test_mlc_morph.py  wrapper.py
tests/: requirements_tests.R  requirements_tests.tsv  test_02_process_data_per_UD_proj.R  test_03_process_data_per_UD_proj.R  test_calculate_surprisal.R  test_filter_multiword.R  test_process_data.R
(+18 files in other folders)
