[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pycode_ud"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "numpy==2.0.2",
    "rich==14.2.0",
    "tqdm==4.67.1",
    "polars==1.35.2",
    "pytest==8.3.4",
]

[tool.setuptools]
packages = ["pycode_ud"]
package-dir = {"" = "."}